syntax = "proto3";

option java_package = "com.hongducle96.threething";
option java_multiple_files = true;

message TaskProto {
    string text = 1;
    bool isCompleted = 2;
}

message UserPreferences {
    TaskProto task1 = 1;
    TaskProto task2 = 2;
    TaskProto task3 = 3;
}
